<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_filter_center_focus"
        android:title="@string/nav_camera" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_home_pin"
        android:title="@string/nav_map" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_shopping_bag"
        android:title="@string/nav_shop" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/nav_user" />

</menu>