<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.riski.greenadvisor.ui.home.HomeFragment"
        android:label="@string/nav_dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.riski.greenadvisor.ui.camera.CameraFragment"
        android:label="@string/nav_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.riski.greenadvisor.ui.map.MapFragment"
        android:label="@string/nav_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.riski.greenadvisor.ui.shop.ShopFragment"
        android:label="@string/nav_shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.riski.greenadvisor.ui.user.UserFragment"
        android:label="@string/nav_user"
        tools:layout="@layout/fragment_user" />

</navigation>