<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_gravity="bottom"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bottom_rekomendasi"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:fontFamily="@font/sfpro_display_regular"
        android:padding="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bottom_saran"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sfpro_display_regular" />

    <TextView
        android:id="@+id/bottom_plant"
        style="@style/Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/bottom_click" />


</LinearLayout>