<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white_smoke"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.detail.detailarticles.DetailArticlesActivity">


    <ImageView
        android:id="@+id/detail_articles_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        tools:src="@drawable/shop1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/detail_articles_judul"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/home_articles"
        android:textSize="23sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:maxLines="4"
        android:fontFamily="@font/sfpro_display_bold"
        app:layout_constraintTop_toBottomOf="@id/detail_articles_image"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/detail_articles_deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/contoh_deskripsi"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/sfpro_display_regular"
        app:layout_constraintTop_toBottomOf="@id/detail_articles_judul"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/detail_articles_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contoh_tahun"
        android:fontFamily="@font/sfpro_display_regular"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="@id/detail_articles_judul"
        app:layout_constraintBottom_toBottomOf="@id/detail_articles_judul"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>