<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    tools:context=".ui.user.UserFragment">

    <View
        android:id="@+id/home_green"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:background="@color/lime_green"
        app:layout_constraintBottom_toTopOf="@id/home_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/home_white"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white_smoke"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_green" />

    <androidx.cardview.widget.CardView
        android:id="@+id/user_cardView"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

    <TextView
        android:id="@+id/user_profile"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/circle_bg"
        android:gravity="center"
        android:text="@string/home_ga"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="NotSibling" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro_display_regular"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/user_profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beta_version"
                android:textSize="12sp"
                android:fontFamily="@font/sfpro_display_bold"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/blue_primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/user_language"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/user_language"
        android:fontFamily="@font/sfpro_display_regular"
        android:textSize="18sp"
        android:gravity="start|center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:focusable="true"
        android:clickable="true"
        android:drawablePadding="10dp"
        android:background="?attr/selectableItemBackground"
        android:drawableStart="@drawable/ic_baseline_language_24"
        app:layout_constraintTop_toBottomOf="@id/user_setting_safety"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/user_syarat"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="18sp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/user_syarat"
        app:layout_constraintTop_toBottomOf="@id/user_language"
        android:paddingStart="40dp"
        android:paddingEnd="5dp"
        android:fontFamily="@font/sfpro_display_regular"
        android:focusable="true"
        android:clickable="true"
        android:gravity="start|center_vertical" />

    <TextView
        android:id="@+id/user_kebijakan"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/user_kebijakan"
        android:textSize="18sp"
        android:fontFamily="@font/sfpro_display_regular"
        android:background="?attr/selectableItemBackground"
        android:paddingStart="40dp"
        android:focusable="true"
        android:clickable="true"
        android:paddingEnd="5dp"
        android:gravity="start|center_vertical"
        app:layout_constraintTop_toBottomOf="@id/user_syarat" />

    <TextView
        android:id="@+id/user_setting_profil"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/user_setting_profil"
        android:fontFamily="@font/sfpro_display_regular"
        android:textSize="18sp"
        android:paddingStart="10dp"
        android:focusable="true"
        android:clickable="true"
        android:gravity="start|center_vertical"
        android:drawableStart="@drawable/ic_account_circle"
        android:drawablePadding="10dp"
        android:paddingEnd="5dp"
        android:layout_marginTop="20dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/user_cardView"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/user_setting_safety"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/user_setting_safety"
        android:textSize="18sp"
        android:fontFamily="@font/sfpro_display_regular"
        android:paddingStart="40dp"
        android:focusable="true"
        android:paddingEnd="5dp"
        android:clickable="true"
        android:gravity="start|center_vertical"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/user_setting_profil" />


    <TextView
        android:id="@+id/user_logout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:drawableStart="@drawable/ic_baseline_logout_24"
        android:text="@string/user_logout"
        android:gravity="start|center_vertical"
        android:background="?attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:textSize="18sp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:drawablePadding="10dp"
        android:fontFamily="@font/sfpro_display_regular"
        app:layout_constraintTop_toBottomOf="@id/user_kebijakan"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseCompatTextViewDrawableXml" />

</androidx.constraintlayout.widget.ConstraintLayout>