<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="5dp"
    android:background="@color/white"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/item_articles_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="fitXY"
        android:padding="5dp"
        android:src="@drawable/plant_care1"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/item_articles_judul"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="16sp"
        android:maxLines="3"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        app:layout_constrainedWidth="true"
        android:fontFamily="@font/sfpro_display_bold"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/item_articles_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_articles_deskripsi"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/contoh_deskripsi"
        android:fontFamily="@font/sfpro_display_regular"
        android:textSize="16sp"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/item_articles_image"
        app:layout_constraintTop_toBottomOf="@id/item_articles_judul"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/item_articles_tahun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contoh_tahun"
        android:textSize="15sp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/sfpro_display_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/item_articles_image" />

    <TextView
        android:id="@+id/item_articles_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contoh_copyright"
        android:textSize="13sp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/blue_primary"
        android:fontFamily="@font/sfpro_display_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>