<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="5dp"
    app:cardElevation="5dp"
    app:cardBackgroundColor="@color/white"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/item_maps_image"
        android:layout_width="90dp"
        android:layout_height="80dp"
        tools:src="@drawable/greetings1"
        android:scaleType="fitXY"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_map_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contoh_copyright"
        android:fontFamily="@font/sfpro_display_regular"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toEndOf="@id/item_maps_image"
        app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_maps_iklim_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iklim"
            android:textSize="18sp"
            android:fontFamily="@font/sfpro_display_regular"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_maps_image"
            app:layout_constraintTop_toBottomOf="@id/item_map_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_maps_iklim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_map"
        android:fontFamily="@font/sfpro_display_regular"
        style="@style/Register"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_map_name"
        app:layout_constraintStart_toEndOf="@id/item_maps_iklim_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>